2006-08-09 Andrew Johnson <acjgenius@earthlink.net>

	* engines/clearlooks/src/animation.h:
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_rc_style.h:
	* engines/clearlooks/src/clearlooks_style.h:
	* engines/clearlooks/src/support.h:
	* engines/crux/src/crux-draw.h:
	* engines/crux/src/crux-rc-style.h:
	* engines/crux/src/crux-style.h:
	* engines/glide/src/glide_gtk2_drawing.h:
	* engines/glide/src/glide_gtk2_engine.h:
	* engines/glide/src/glide_gtk2_support.h:
	* engines/hc/src/hc_gtk2_drawing.h:
	* engines/hc/src/hc_gtk2_engine.h:
	* engines/hc/src/hc_gtk2_support.h:
	* engines/industrial/src/industrial_rc_style.h:
	* engines/industrial/src/industrial_style.h:
	* engines/mist/src/mist-rc-style.h:
	* engines/mist/src/mist-style.h:
	* engines/redmond/src/redmond_gtk2_drawing.h:
	* engines/redmond/src/redmond_gtk2_engine.h:
	* engines/redmond/src/redmond_gtk2_misc.h:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_drawing.h:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_misc.h:
	* engines/smooth/src/engine/shared/gtk/smooth_gtk_rc.h:
	* engines/smooth/src/engine/smooth_gtk2_drawing.h:
	* engines/smooth/src/engine/smooth_gtk2_engine.h:
	* engines/smooth/src/engine/smooth_gtk2_misc.h:
	* engines/smooth/src/engine/smooth_gtk2_rc.h:
	* engines/smooth/src/interfaces/abstract/abstract_drawing_interface
	.h:
	* engines/smooth/src/interfaces/drawing_interface.h:
	* engines/smooth/src/interfaces/gdk2/gdk2_drawing_interface.h:
	* engines/smooth/src/interfaces/shared/gdk/gdk_drawing_interface.h:
	* engines/smooth/src/interfaces/shared/gdk/gdk_private_drawing_inte
	rface.h:
	* engines/smooth/src/utils/calc_colors.h:
	* engines/smooth/src/utils/draw_arrows.h:
	* engines/smooth/src/utils/draw_border.h:
	* engines/smooth/src/utils/draw_checkmark.h:
	* engines/smooth/src/utils/draw_fill.h:
	* engines/smooth/src/utils/draw_grips.h:
	* engines/support/cairo-support.h:
	* engines/support/general-support.h: